Implement reading questions and answers from a JSON file and displaying them on the scoreboard.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -33,7 +33,8 @@ set(CPP_HEADERS
 	${CPP_INCLUDE_DIR}/scoreboardmodel.h
 	${CPP_INCLUDE_DIR}/sidebarmodel.h
 	${CPP_INCLUDE_DIR}/answerareamodel.h
-	${CPP_INCLUDE_DIR}/questionlistmodel.h)
+	${CPP_INCLUDE_DIR}/questionlistmodel.h
+	${CPP_INCLUDE_DIR}/answerlistmodel.h)
 
 set(CPP_SRC_DIR "src")
 set(CPP_SOURCES
@@ -41,7 +42,8 @@ set(CPP_SOURCES
 	${CPP_SRC_DIR}/scoreboardmodel.cpp
 	${CPP_SRC_DIR}/sidebarmodel.cpp
 	${CPP_SRC_DIR}/answerareamodel.cpp
-	${CPP_SRC_DIR}/questionlistmodel.cpp)
+	${CPP_SRC_DIR}/questionlistmodel.cpp
+	${CPP_SRC_DIR}/answerlistmodel.cpp)
 
 if(ANDROID)
     add_library(Weseliada SHARED
