Start experimenting with different themes like Material.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -24,7 +24,7 @@ set(CMAKE_CXX_STANDARD_REQUIRED ON)
 #    endif()
 #endif()
 
-find_package(Qt5 COMPONENTS Core Quick LinguistTools REQUIRED)
+find_package(Qt5 COMPONENTS Core Quick LinguistTools QuickControls2 REQUIRED)
 
 set(TS_FILES Weseliada_pl_PL.ts)
 
@@ -67,7 +67,7 @@ endif()
 target_compile_definitions(Weseliada
   PRIVATE $<$<OR:$<CONFIG:Debug>,$<CONFIG:RelWithDebInfo>>:QT_QML_DEBUG>)
 target_link_libraries(Weseliada
-  PRIVATE Qt5::Core Qt5::Quick)
+  PRIVATE Qt5::Core Qt5::Quick Qt5::QuickControls2)
 target_include_directories(Weseliada
   PRIVATE ${CPP_INCLUDE_DIR})
 
